updated maven build for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ sonarcloud:
     secure: $SONAR_TOKEN
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  - mvn clean verify sonar:sonar -Pcoverage
+  - mvn clean verify sonar:sonar
