--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,7 @@ spring:
                     lob:
                         non_contextual_creation: true
     flyway:
+        locations: ${FLYWAY_LOCATIONS:classpath:/db/migration,classpath:/db/data/dev}
         clean-on-validation-error: ${FLYWAY_CLEAN_ON_VALIDATION_ERROR:true}
 
 security:
