--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,14 @@
 
   <properties>
     <cactoos.version>0.44</cactoos.version>
+    <commons.io-version>2.6</commons.io-version>
     <commons.lang.version>3.9</commons.lang.version>
     <commons.net.version>3.6</commons.net.version>
     <flyway.test.version>6.1.0</flyway.test.version>
+    <geoip.version>2.13.1</geoip.version>
     <gson.version>2.8.1</gson.version>
     <jacoco.version>0.8.5</jacoco.version>
+    <jarchive.version>1.0.0</jarchive.version>
     <java.version>13</java.version>
     <json.version>20190722</json.version>
     <json.view.version>1.0.1</json.view.version>
@@ -49,6 +52,7 @@
     <sonar.projectKey>the-pragmatic-dev_meco-api</sonar.projectKey>
     <springdoc.version>1.3.1</springdoc.version>
     <stripe.version>16.4.0</stripe.version>
+    <uap-java.version>1.4.0</uap-java.version>
   </properties>
 
   <profiles>
@@ -151,6 +155,18 @@
       <artifactId>jjwt</artifactId>
       <version>${jwt.version}</version>
     </dependency>
+    <!-- geolocation -->
+    <dependency>
+      <groupId>com.maxmind.geoip2</groupId>
+      <artifactId>geoip2</artifactId>
+      <version>${geoip.version}</version>
+    </dependency>
+    <!-- user agent parser -->
+    <dependency>
+      <groupId>com.github.ua-parser</groupId>
+      <artifactId>uap-java</artifactId>
+      <version>${uap-java.version}</version>
+    </dependency>
     <!-- json dependencies -->
     <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
@@ -181,6 +197,11 @@
     </dependency>
     <!-- apache commons dependencies -->
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>${commons.io-version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>${commons.lang.version}</version>
@@ -189,6 +210,12 @@
       <groupId>commons-net</groupId>
       <artifactId>commons-net</artifactId>
       <version>${commons.net.version}</version>
+    </dependency>
+    <!-- archiving and compressing files -->
+    <dependency>
+      <groupId>org.rauschig</groupId>
+      <artifactId>jarchivelib</artifactId>
+      <version>${jarchive.version}</version>
     </dependency>
     <!-- opencsv -->
     <dependency>
@@ -203,14 +230,21 @@
       <scope>test</scope>
       <exclusions>
         <exclusion>
-          <groupId>org.junit.vintage</groupId>
-          <artifactId>junit-vintage-engine</artifactId>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
         </exclusion>
         <exclusion>
           <groupId>com.vaadin.external.google</groupId>
           <artifactId>android-json</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <!-- junit 5 -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
