--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -1,61 +1,79 @@
 {
-    "groups": [
-        {
-            "name": "kms"
-        },
-        {
-            "name": "security.jwt.token"
-        },
-        {
-            "name": "stripe"
-        },
-        {
-            "name": "mailgun"
-        },
-        {
-            "name": "mailgun.from"
-        }
-    ],
-    "properties": [
-        {
-            "name": "kms.api-key-limit",
-            "type": "java.lang.Integer",
-            "description": "Maximum number of API keys allowed per user account."
-        },
-        {
-            "name": "security.jwt.token.secret-key",
-            "type": "java.lang.String",
-            "description": "A signing key to use to digitally sign the JWT."
-        },
-        {
-            "name": "security.jwt.token.expire-length",
-            "type": "java.lang.String",
-            "description": "Sets the JWT Claims exp (expiration) value."
-        },
-        {
-            "name": "stripe.secret-key",
-            "type": "java.lang.String",
-            "description": "Key used in backend code to send any request to Stripe's API."
-        },
-        {
-            "name": "mailgun.domain",
-            "type": "java.lang.String",
-            "description": "Sets the Mailgun domain for this configuration."
-        },
-        {
-            "name": "mailgun.secret-key",
-            "type": "java.lang.String",
-            "description": "Key used in backend code to send any request to Mailgun's API."
-        },
-        {
-            "name": "mailgun.from.name",
-            "type": "java.lang.String",
-            "description": "Sets the default sender name for messages that do not specify an address themselves."
-        },
-        {
-            "name": "mailgun.from.email",
-            "type": "java.lang.String",
-            "description": "Sets the default sender email for messages that do not specify an address themselves."
-        }
-    ]
+  "groups": [
+    {
+      "name": "kms"
+    },
+    {
+      "name": "security.jwt.token"
+    },
+    {
+      "name": "stripe"
+    },
+    {
+      "name": "mailgun"
+    },
+    {
+      "name": "mailgun.from"
+    },
+    {
+      "name": "geolite2"
+    }
+  ],
+  "properties": [
+    {
+      "name": "kms.api-key-limit",
+      "type": "java.lang.Integer",
+      "description": "Maximum number of API keys allowed per user account."
+    },
+    {
+      "name": "security.jwt.token.secret-key",
+      "type": "java.lang.String",
+      "description": "A signing key to use to digitally sign the JWT."
+    },
+    {
+      "name": "security.jwt.token.expire-length",
+      "type": "java.lang.String",
+      "description": "Sets the JWT Claims exp (expiration) value."
+    },
+    {
+      "name": "stripe.secret-key",
+      "type": "java.lang.String",
+      "description": "Key used in backend code to send any request to Stripe's API."
+    },
+    {
+      "name": "mailgun.domain",
+      "type": "java.lang.String",
+      "description": "Sets the Mailgun domain for this configuration."
+    },
+    {
+      "name": "mailgun.secret-key",
+      "type": "java.lang.String",
+      "description": "Key used in backend code to send any request to Mailgun's API."
+    },
+    {
+      "name": "mailgun.from.name",
+      "type": "java.lang.String",
+      "description": "Sets the default sender name for messages that do not specify an address themselves."
+    },
+    {
+      "name": "mailgun.from.email",
+      "type": "java.lang.String",
+      "description": "Sets the default sender email for messages that do not specify an address themselves."
+    },
+    {
+      "name": "geolite2.name",
+      "type": "java.lang.String",
+      "description": "Name of the GeoLite2 mmdb database."
+    },
+    {
+      "name": "geolite2.permalink",
+      "type": "java.lang.String",
+      "description": "Link to licenced download link."
+    },
+    {
+      "name": "geolite2.directory",
+      "type": "java.lang.String",
+      "description": "Directory where to download database to."
+    }
+  ]
 }
