updating travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ install: ./mvnw dependency:resolve
 before_script:
   - psql --version
   - psql -c 'create database travis_ci_test;' -U postgres
-  - ./scripts/init.sh /var/lib/meco/ root
+  - whoami
+  - sudo ./scripts/init.sh /var/lib/meco/ root
 
 stages:
   - test
