--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,7 @@ install: ./mvnw dependency:resolve
 before_script:
   - psql --version
   - psql -c 'create database travis_ci_test;' -U postgres
-  - whoami
-  - sudo ./scripts/init.sh /var/lib/meco/ root
+  - ./scripts/init.sh /var/lib/meco/ travis
 
 stages:
   - test
