--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,8 @@ stages:
 jobs:
   include:
     - stage: test
-    - script: ./mvnw clean compile # compilation and checkstyle errors
-    - script: ./mvnw clean verify sonar:sonar # run unit tests and push results to sonarcloud
-    - script: ./mvnw clean verify -P integration # run integration tests
+    # checks compilation and checkstyle errors then runs unit and integration tests before pushing results to sonarcloud.
+    - script: ./mvnw clean verify -P all sonar:sonar
     - stage: provision
     - script: echo TODO # TODO: run terraform
     - stage: deploy
