fixing lombok code coverage

--- a/src/lombok.config
+++ b/src/lombok.config
@@ -3,3 +3,6 @@ lombok.getter.noIsPrefix = true
 
 # Tell the configuration system it should stop looking for other configuration files 
 config.stopBubbling = true
+
+# Adds lombok generated annotation to all generated methods for code coverage
+lombok.addLombokGeneratedAnnotation = true
