--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,12 @@
       <artifactId>opencsv</artifactId>
       <version>${opencsv.version}</version>
     </dependency>
+    <!-- mapping objects -->
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>2.3.7</version>
+    </dependency>
     <!-- testing dependencies -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
