--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <maven.failsafe.plugin.version>3.0.0-M1</maven.failsafe.plugin.version>
     <maven.help.plugin.version>3.2.0</maven.help.plugin.version>
     <maven.surefire.plugin.version>3.0.0-M1</maven.surefire.plugin.version>
+    <model.mapper.version>2.3.7</model.mapper.version>
     <okhttp3.version>4.0.1</okhttp3.version>
     <opencsv.version>5.1</opencsv.version>
     <podam.version>7.2.3.RELEASE</podam.version>
@@ -53,7 +54,7 @@
     <sonar.projectKey>the-pragmatic-dev_meco-api</sonar.projectKey>
     <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     <springdoc.version>1.3.1</springdoc.version>
-    <stripe.version>16.4.0</stripe.version>
+    <stripe.version>19.11.0</stripe.version>
     <uap-java.version>1.4.0</uap-java.version>
   </properties>
 
@@ -237,7 +238,7 @@
     <dependency>
       <groupId>org.modelmapper</groupId>
       <artifactId>modelmapper</artifactId>
-      <version>2.3.7</version>
+      <version>${model.mapper.version}</version>
     </dependency>
     <!-- testing dependencies -->
     <dependency>
