--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -4,7 +4,7 @@
       "name": "kms"
     },
     {
-      "name": "security.jwt.token"
+      "name": "security.token"
     },
     {
       "name": "stripe"
@@ -26,14 +26,19 @@
       "description": "Maximum number of API keys allowed per user account."
     },
     {
-      "name": "security.jwt.token.secret-key",
+      "name": "security.token.secret-key",
       "type": "java.lang.String",
-      "description": "A signing key to use to digitally sign the JWT."
+      "description": "A signing key to use to digitally sign a JWT."
     },
     {
-      "name": "security.jwt.token.expire-length",
+      "name": "security.token.access-token-expiration-minutes",
       "type": "java.lang.String",
-      "description": "Sets the JWT Claims exp (expiration) value."
+      "description": "Sets the access token expiration minutes."
+    },
+    {
+      "name": "security.token.refresh-token-expiration-days",
+      "type": "java.lang.String",
+      "description": "Sets the refresh token expiration days."
     },
     {
       "name": "stripe.secret-key",
