--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <flyway.test.version>6.1.0</flyway.test.version>
     <geoip.version>2.13.1</geoip.version>
     <gson.version>2.8.1</gson.version>
+    <hamcrest-date.version>2.0.7</hamcrest-date.version>
     <jacoco.version>0.8.5</jacoco.version>
     <jarchive.version>1.0.0</jarchive.version>
     <java.version>13</java.version>
@@ -271,6 +272,11 @@
       <artifactId>rest-assured-all</artifactId>
       <version>${rest.assured.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.exparity</groupId>
+      <artifactId>hamcrest-date</artifactId>
+      <version>${hamcrest-date.version}</version>
     </dependency>
     <dependency>
       <groupId>org.cactoos</groupId>
