--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
    port: ${PORT:8080}
 
 spring:
+    jackson:
+        serialization:
+            FAIL_ON_EMPTY_BEANS: false
     thymeleaf:
         cache: false
     output:
@@ -74,6 +77,9 @@ mailgun:
         subject: 'A new key was added to your account'
       - name: 'key-deleted'
         subject: 'A key was deleted from your account'
+
+perspective:
+    secret-key: ${PERSPECTIVE_SECRET_KEY:secret_key}
             
 kms:
     api-key-limit: ${API_KEY_LIMIT:10}
@@ -82,7 +88,3 @@ geolite2:
     name: GeoLite2-City.mmdb
     permalink: ${GEOLITE_URL:https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-City&license_key=YOUR_LICENSE_KEY&suffix=tar.gz}
     directory: ${GEOLITE_DIRECTORY:/var/lib/meco/}
-
-logging:
-    file:
-        path: ${LOGS_DIR:logs}
