--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,9 +35,9 @@ spring:
         clean-on-validation-error: ${FLYWAY_CLEAN_ON_VALIDATION_ERROR:true}
 
 async:
-    core-pool-size: 5
-    max-pool-size: 10
-    queue-capacity: 10
+    core-pool-size: ${ASYNC_CORE_POOL_SIZE:5}
+    max-pool-size: ${ASYNC_MAX_POOL_SIZE:10}
+    queue-capacity: ${ASYNC_QUEUE_CAPACITY:10}
 
 security:
     token:
