adding procfile removing dockerfile

--- a/pom.xml
+++ b/pom.xml
@@ -344,6 +344,7 @@
   </dependencies>
 
   <build>
+    <finalName>${project.artifactId}</finalName>
     <plugins>
       <!-- display active profiles in compile phase -->
       <plugin>
