--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,4 @@
 server:
-    address: ${ADDRESS:0.0.0.0}
     port: ${PORT:8080}
 
 spring:
@@ -51,6 +50,9 @@ security:
 management:
     endpoints:
         web:
+            cors:
+                allowed-origins: '*'
+                allowed-methods: GET
             exposure:
                 include: info, health, flyway, metrics
 
@@ -97,7 +99,10 @@ geolite2:
     name: GeoLite2-City.mmdb
     permalink: ${GEOLITE_URL:https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-City&license_key=YOUR_LICENSE_KEY&suffix=tar.gz}
     directory: ${GEOLITE_DIRECTORY:/var/lib/meco/}
-    
+
+logging:
+  config: classpath:log4j2.dev.properties
+
 ---
 
 spring:
