--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -23,6 +23,9 @@
     },
     {
       "name": "geolite2"
+    },
+    {
+      "name": "bucket"
     }
   ],
   "properties": [
@@ -120,6 +123,21 @@
       "name": "geolite2.directory",
       "type": "java.lang.String",
       "description": "Directory where to download database to."
+    },
+    {
+      "name": "bucket.capacity",
+      "type": "java.lang.Long",
+      "description": "Maximum number of tokens in bucket."
+    },
+    {
+      "name": "bucket.tokens",
+      "type": "java.lang.Long",
+      "description": "Number of refill tokens."
+    },
+    {
+      "name": "bucket.minutes",
+      "type": "java.lang.Long",
+      "description": "Period for refilling tokens."
     }
   ]
 }
